Source/WebKit/UIProcess/Downloads/DownloadProxyMap.cpp
@@ -110,7 +110,7 @@ void DownloadProxyMap::downloadFinished(DownloadProxy& downloadProxy)
     }
 }
 
-void DownloadProxyMap::processDidClose()
+void DownloadProxyMap::invalidate()
 {
     // Invalidate all outstanding downloads.
     for (const auto& download : m_downloads.values()) {
